--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -38,14 +38,13 @@
 						<li><a href={% url 'agenda-list' %}>Agendas</a></li>
 						<li><a href={% url 'minutes-list' %}>Minutes</a></li>
 					</ul>
-					<form class="navbar-form navbar-right" role="form" method="POST">
-						{% csrf_token %}
-  						<button type="submit" class="btn btn-default" name="logout_button" value="logout" data-toggle="button">Sign out</button>
-  					</form>
+					
 					<ul class="nav navbar-nav navbar-right">
 						<li class="active"><a href="#">Bug report / Feature request</a></li>
 						<li><a href="#">Help</a></li>
+						<a href={% url 'logout' %}><button type="submit" class="btn btn-default navbar-btn" name="logout_button" value="logout" data-toggle="button">Sign out</button></a>
       				</ul>
+      				
       					
       					
       					
