Removed inappropriate fields from participant forms

--- a/core/templates/participant_add.html
+++ b/core/templates/participant_add.html
@@ -12,14 +12,22 @@
 <div class="well"> 
       
 	<form action="" method="POST">
-			
+		<div class="form-group">
 			{% csrf_token %}
-    		{% for field in participant_form %}
-				<div>
-      			{{ field.label_tag }} {{ field|setclass:"form-control" }}
-				</div>
-				<br>
-			{% endfor %}
+    	</div>
+    	
+    	{% for hidden in participant_form.hidden_fields %}
+   			<div class="form-group">
+   				{{ hidden }}
+   			</div>
+		{% endfor %}	
+
+    	{% for field in participant_form.visible_fields %}
+			<div>
+				{{ field.label_tag }} {{ field|setclass:"form-control" }}
+			</div>
+			<br>
+		{% endfor %}
 
      	 	<button type="submit" class="btn btn-primary" data-toggle="button">Add participant</button>
      	 	<a href={% url 'participant-list' %}><button type="button" class="btn btn-default" data-toggle="button">Cancel</button></a>
