--- a/core/templates/agenda_add.html
+++ b/core/templates/agenda_add.html
@@ -13,16 +13,15 @@
 
 <div class="well">
 	<div class="span10"> 
-   		<form action="" method="POST">
+		<form action="" method="POST">
 			{% csrf_token %}
+			<p class="help-block">Once you save the meeting details you can begin to build the agenda.</p>
+   			<br>
 			<p><strong>Date:</strong> {{ meeting_form.date|setclass:"form-control" }}</p>
 			<p><strong>Location:</strong> {{ meeting_form.location|setclass:"form-control" }}</p>
 			<p><strong>Type of meeting:</strong> {{ meeting_form.description|setclass:"form-control" }}</p>
 			<button type="submit" class="btn btn-primary" data-toggle="button">Save meeting details</button></a>
-			<a href={% url 'index' %}><button type="button" class="btn btn-default" data-toggle="button">Cancel</button></a>
-			<br>
-			<br>
-			<p>Once you save the meeting details you can begin to build the agenda.</p>
+			<a href={% url 'agenda-list' %}><button type="button" class="btn btn-default" data-toggle="button">Cancel</button></a>
 		</form>
 	</div>
 </div>
