--- a/core/templates/agenda_edit.html
+++ b/core/templates/agenda_edit.html
@@ -102,7 +102,9 @@
 			</tbody>
 		</table>
 	</div>
-	<a href={% url 'task-list' %}><button type="button" class="btn btn-primary" data-toggle="button">Edit tasks</button></a>
+	{% ifequal editable_section 'none' %}
+		<a href={% url 'task-list' %}><button type="button" class="btn btn-primary" data-toggle="button">Edit tasks</button></a>
+	{% endifequal %}
 </div>
 
 
