--- a/core/templates/agenda_edit.html
+++ b/core/templates/agenda_edit.html
@@ -153,7 +153,7 @@
 				<form action="" method="POST">
 					{% csrf_token %}
 					<button type="submit" class="btn btn-primary" name="edit_main_items_button" value="edit_main_items" data-toggle="button">Edit main items</button>
-					<button type="submit" class="btn btn-default" name="add_main_item_button" value="add_main_item" data-toggle="button">Add another main item</button>
+					<button type="submit" class="btn btn-default" name="add_main_item_button" value="add_main_item" data-toggle="button">Add a main item</button>
 				</form>
 			{% endifequal %}
 		</div>
