Agenda: Enable deletion of agenda items

--- a/core/templates/agenda_edit.html
+++ b/core/templates/agenda_edit.html
@@ -129,6 +129,8 @@
 								{{ item.background|setclass:"form-control" }}
 								{{ item.id|setclass:"form-control" }}
 						    	{{ item.variety|setclass:"form-control" }}
+						    	<br>
+						    	{{ item.DELETE.label_tag }}{{ item.DELETE|setclass:"form-control"}}
 						</div>
 					</div>
 				{% endfor %}
