Minutes: Enable deletion of tasks and decisions

--- a/core/templates/minutes_edit.html
+++ b/core/templates/minutes_edit.html
@@ -139,6 +139,7 @@
 											{{ decision.id|setclass:"form-control" }}
 											{{ decision.meeting|setclass:"form-control" }}
 											{{ decision.item|setclass:"form-control" }}
+											{{ decision.DELETE.label_tag }}{{ decision.DELETE|setclass:"form-control"}}
 										</div>
 									{% endifequal %}
 								{% endfor %}
@@ -160,6 +161,9 @@
 									   			<div class="col-sm-4">
 									   				{{ task.deadline|setclass:"form-control" }}
 												</div>
+												<div>
+													{{ task.DELETE.label_tag }}{{ task.DELETE|setclass:"form-control"}}
+												</div
 												{{ task.status|setclass:"form-control" }}
 												{{ task.id|setclass:"form-control" }}
 												{{ task.meeting|setclass:"form-control" }}
