Agenda/Minutes: Added linebreak tags to templates

--- a/core/templates/agenda_edit.html
+++ b/core/templates/agenda_edit.html
@@ -147,7 +147,7 @@
 						{{ item.heading }}
 					</div>
 					<div class="panel-body">
-						{{ item.background }}
+						{{ item.background|linebreaks }}
 					</div>
 				</div>
 			{% endfor %}
