--- a/core/templates/minutes_edit.html
+++ b/core/templates/minutes_edit.html
@@ -192,7 +192,7 @@
 						{{ item.heading }}
 					</div>
 					<div class="panel-body">
-						{{ item.background }}
+						{{ item.background|linebreaks }}
 					</div>
 				</div>
 			{% endfor %}
