--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -41,18 +41,29 @@
 					</ul>
 					
 					<ul class="nav navbar-nav navbar-right">
-						<li class="active"><a href="#">Bug report / Feature request</a></li>
-						<li><a href="#">Help</a></li>
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Feedback <b class="caret"></b></a>
+							<ul class="dropdown-menu">
+								<li><a href="#"><strong>Report a bug</strong></a></li>
+								<li><a href="#">View all bug reports</a></li>
+								<li class="divider"></li>
+								<li><a href="#"><strong>Request a feature</strong></a></li>
+								<li><a href="#">View all feature requests</a></li>
+							</ul>
+						</li>
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Help <b class="caret"></b></a>
+							<ul class="dropdown-menu">
+								<li><a href="#"><strong>User guide</strong></a></li>
+								<li class="divider"></li>
+								<li><a href="#"><strong>FAQs</strong></a></li>
+								<li><a href="#">Ask a question</a></li>
+							</ul>
+						</li>
 						<p class="navbar-text">Hi, {{ user }}</p>
 						<a href={% url 'logout' %}><button type="submit" class="btn btn-default navbar-btn" name="logout_button" value="logout" data-toggle="button">Sign out</button></a>
       				</ul>
-      				
-      					
-      					
-      					
-      					
-
-				</div>
+      			</div>
 			</div>
 		</div>
 
