--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -41,6 +41,7 @@
 					</ul>
 					
 					<ul class="nav navbar-nav navbar-right">
+						
 						<li class="dropdown">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Feedback <b class="caret"></b></a>
 							<ul class="dropdown-menu">
@@ -51,6 +52,7 @@
 								<li><a href="#">View all feature requests</a></li>
 							</ul>
 						</li>
+						
 						<li class="dropdown">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Help <b class="caret"></b></a>
 							<ul class="dropdown-menu">
@@ -60,8 +62,15 @@
 								<li><a href="#">Ask a question</a></li>
 							</ul>
 						</li>
-						<p class="navbar-text">Hi, {{ user }}</p>
-						<a href={% url 'logout' %}><button type="submit" class="btn btn-default navbar-btn" name="logout_button" value="logout" data-toggle="button">Sign out</button></a>
+						
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Hi, {{ user }} <b class="caret"></b></a>
+							<ul class="dropdown-menu">
+								<li><a href="#">Account settings</a></li>
+								<li class="divider"></li>
+								<li><a href={% url 'logout' %}><strong>Log out</strong></a></li>
+							</ul>
+						</li>
       				</ul>
       			</div>
 			</div>
