--- a/core/templates/task_list.html
+++ b/core/templates/task_list.html
@@ -24,6 +24,10 @@
 					<td>{{ task.deadline }}</td>
 					<td>{{ task.status }}</td>
 				</tr>
+			{% empty %}
+				<tr>
+					<td>There are no tasks yet.</td>
+				</tr>
 			{% endfor%}
 		</tbody>
 	</table>
