--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -56,7 +56,7 @@
 						<li class="dropdown">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Help <b class="caret"></b></a>
 							<ul class="dropdown-menu">
-								<li><a href="#"><strong>User guide</strong></a></li>
+								<li><a href={% url 'user-guide' %}><strong>User guide</strong></a></li>
 								<li class="divider"></li>
 								<li><a href="#"><strong>FAQs</strong></a></li>
 								<li><a href="#">Ask a question</a></li>
