Dashboard/Agendas/Minutes: Added group name to templates

--- a/core/templates/agenda_edit.html
+++ b/core/templates/agenda_edit.html
@@ -57,7 +57,7 @@
 		<table class="table">
 			<thead>
 				<tr>
-					<th>{{ meeting.description }} of **group name**</th>
+					<th>{{ meeting.description }} of {{ account.group_name }}</th>
 					<th></th>
 				</tr>
 			</thead>
