--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -45,11 +45,11 @@
 						<li class="dropdown">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Feedback <b class="caret"></b></a>
 							<ul class="dropdown-menu">
-								<li><a href="#"><strong>Report a bug</strong></a></li>
-								<li><a href="#">View all bug reports</a></li>
+								<li><a href={% url 'bug-report' %}><strong>Report a bug</strong></a></li>
+								<li><a href={% url 'bug-list' %}>View all bug reports</a></li>
 								<li class="divider"></li>
-								<li><a href="#"><strong>Request a feature</strong></a></li>
-								<li><a href="#">View all feature requests</a></li>
+								<li><a href={% url 'feature-request' %}><strong>Request a feature</strong></a></li>
+								<li><a href={% url 'feature-list' %}>View all feature requests</a></li>
 							</ul>
 						</li>
 						
