Questions: Added FAQ and Ask a question pages

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -58,8 +58,8 @@
 							<ul class="dropdown-menu">
 								<li><a href={% url 'user-guide' %}><strong>User guide</strong></a></li>
 								<li class="divider"></li>
-								<li><a href="#"><strong>FAQs</strong></a></li>
-								<li><a href="#">Ask a question</a></li>
+								<li><a href={% url 'faqs' %}><strong>FAQs</strong></a></li>
+								<li><a href={% url 'ask-question' %}>Ask a question</a></li>
 							</ul>
 						</li>
 						
