Miscellaneous tidying of page appearances

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -48,8 +48,8 @@
 								<li><a href={% url 'bug-report' %}><strong>Report a bug</strong></a></li>
 								<li><a href={% url 'bug-list' %}>View all bug reports</a></li>
 								<li class="divider"></li>
-								<li><a href={% url 'feature-request' %}><strong>Request a feature</strong></a></li>
-								<li><a href={% url 'feature-list' %}>View all feature requests</a></li>
+								<li><a href={% url 'feature-request' %}><strong>Request a feature/change</strong></a></li>
+								<li><a href={% url 'feature-list' %}>View all feature/change requests</a></li>
 							</ul>
 						</li>
 						
