--- a/core/templates/feature_list.html
+++ b/core/templates/feature_list.html
@@ -32,7 +32,7 @@
 	</table>
 </div>
 
-<a href={% url 'feature-request' %}><button type="button" class="btn btn-primary" data-toggle="button">Request a feature</button></a>
+<a href={% url 'feature-request' %}><button type="button" class="btn btn-primary" data-toggle="button">Request a feature/change</button></a>
 	
 	
 {% endblock %}
