--- a/core/templates/agenda_edit.html
+++ b/core/templates/agenda_edit.html
@@ -216,6 +216,61 @@
 </div>
 
 
+{# REPORT ITEMS #}
+
+<h1><small>Reports</small></h1>
+
+	{% ifequal editable_section 'is_report_items' %}
+
+		<div class="well">
+			<form action="" method="POST">
+				{% csrf_token %}
+				{{ existing_data_formset.management_form }}
+				{% for item in existing_data_formset %}
+					<div class="panel panel-primary">
+						<div class="panel-heading">
+							{{ item.heading|setclass:"form-control" }}
+						</div>
+						<div class="panel-body">
+								{{ item.time_limit.label_tag }}{{ item.time_limit|setclass:"form-control" }}		
+								{{ item.explainer.label_tag }}{{ item.explainer|setclass:"form-control" }}
+								{{ item.background.label_tag }}{{ item.background|setclass:"form-control" }}
+								{{ item.id|setclass:"form-control" }}
+						    	{{ item.variety|setclass:"form-control" }}
+						    	<br>
+						    	{{ item.DELETE.label_tag }}{{ item.DELETE|setclass:"form-control"}}
+						</div>
+					</div>
+				{% endfor %}
+				<button type="submit" class="btn btn-primary" name="save_main_items_button" value="save_main_items" data-toggle="button">Save main items</button>
+			</form>
+		</div>
+
+	{% else %}
+
+		<div class="well">
+			{% for item in report_items %}
+				<div class="panel panel-primary">
+					<div class="panel-heading">
+						<strong>{{ item.heading }}</strong>
+						<p class="pull-right">{{ item.time_limit}} minutes</p>
+					</div>
+					<div class="panel-body">
+						<p class="text-muted">To be introduced by {{ item.explainer }}</p>
+						{{ item.background|linebreaks }}
+					</div>
+				</div>
+			{% endfor %}
+			{% ifequal editable_section 'none' %}
+				<form action="" method="POST">
+					{% csrf_token %}
+					<button type="submit" class="btn btn-default" name="edit_report_items_button" value="edit_report_items" data-toggle="button">Edit reports</button>
+					<button type="submit" class="btn btn-default" name="add_report_item_button" value="add_report_item" data-toggle="button">Add a report</button>
+				</form>
+			{% endifequal %}
+		</div>
+		
+	{% endifequal %}
 
 
 {# MAIN ITEMS #}
