--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -15,6 +15,7 @@
 		<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 		<link href="{% static 'css/econvener.css' %}" rel="stylesheet">
 		<link href="{% static 'css/jqueryui-1.10.3.smoothness.css' %}" rel="stylesheet">
+		<link href="{% static 'css/fonts.css' %}" rel="stylesheet">
 	</head>
 
 	<body>
