Implemented time selector widget

--- a/core/templates/agenda_add.html
+++ b/core/templates/agenda_add.html
@@ -19,6 +19,8 @@
    			<br>
 			<p><strong>Date:</strong></p>
 			<p>{{ meeting_form.date }}</p>
+			<p><strong>Start time:</strong></p>
+			<p>{{ meeting_form.start_time }}</p>
 			<p><strong>Location:</strong> {{ meeting_form.location|setclass:"form-control" }}</p>
 			<p><strong>Type of meeting:</strong> {{ meeting_form.description|setclass:"form-control" }}</p>
 			<button type="submit" class="btn btn-primary" data-toggle="button">Save meeting details</button></a>
