--- a/core/templates/agenda_edit.html
+++ b/core/templates/agenda_edit.html
@@ -68,7 +68,7 @@
 				</tr>
 				<tr>
 					<td><strong>Time</strong></td>
-					<td>**2:00pm**</td>
+					<td>{{ meeting.start_time }}</td>
 				</tr>
 				<tr>
 					<td><strong>Scheduled duration</strong></td>
