--- a/core/templates/feature_list.html
+++ b/core/templates/feature_list.html
@@ -18,10 +18,11 @@
 		</thead>
 		<tbody> 
 			{% for feature in features %}
-				<tr>
+				<tr id={{ feature.id }} onclick="document.location='{% url 'feature-edit' feature.id %}';">
 					<td>{{ feature.id }}</td>
 					<td>{{ feature.title }}</td>
 					<td>{{ feature.date }}</td>
+					<td>{{ feature.status }}</td>
 				</tr>
 			{% empty %}
 				<tr>
