Agendas: Added button to agenda_edit to produce PDF

--- a/core/templates/agenda_edit.html
+++ b/core/templates/agenda_edit.html
@@ -391,7 +391,7 @@
 	{% ifequal editable_section 'none' %}
 		<a href={% url 'minutes-edit' meeting_id %}><button type="button" class="btn btn-primary" data-toggle="button">Create minutes from this agenda</button></a>
 	{% endifequal %}
-	<a href={% url 'agenda-distribute' meeting_id %}><button type="button" class="btn btn-primary" data-toggle="button">Format for distribution</button></a>
+	<a href={% url 'agenda-print' meeting_id %}><button type="button" class="btn btn-primary" data-toggle="button">Create a PDF of this agenda</button></a>
 </div>
 
 
