Agendas: Added end time to agendas

--- a/core/templates/agenda_edit.html
+++ b/core/templates/agenda_edit.html
@@ -67,12 +67,16 @@
 					<td>{{ meeting.date }}</td>
 				</tr>
 				<tr>
-					<td><strong>Time</strong></td>
+					<td><strong>Start time</strong></td>
 					<td>{{ meeting.start_time }}</td>
 				</tr>
 				<tr>
 					<td><strong>Scheduled duration</strong></td>
 					<td>{{ meeting_duration }} minutes</td>
+				</tr>
+				<tr>
+					<td><strong>End time</strong></td>
+					<td>{{ meeting_end_time }}</td>
 				</tr>
 				<tr>
 					<td><strong>Location</strong></td>
