Agendas: Added notes field to meeting details

--- a/core/templates/agenda_edit.html
+++ b/core/templates/agenda_edit.html
@@ -78,6 +78,10 @@
 					<td><strong>Location</strong></td>
 					<td>{{ meeting.location|linebreaks }}</td>
 				</tr>
+				<tr>
+					<td><strong>Notes</strong></td>
+					<td>{{ meeting.notes|linebreaks }}</td>
+				</tr>
 			</tbody>
 		</table>
 	</div>
